crates/bevy_ecs/compile_fail/tests/ui/deconstruct_moving_ptr.stderr
error[E0025]: field `x` bound multiple times in the pattern
  --> tests/ui/deconstruct_moving_ptr.rs:25:5
   |
25 | /     deconstruct_moving_ptr!({
26 | |         let A { x, x } = a;
27 | |     });
   | |      ^
   | |      |
   | |______multiple uses of `x` in pattern
   |        first use of `x`
   |
   = note: this error originates in the macro `deconstruct_moving_ptr` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/deconstruct_moving_ptr.rs:31:5
   |
31 | /     deconstruct_moving_ptr!({
32 | |         let A { x } = box_a;
33 | |     });
   | |      ^
   | |      |
   | |______expected `Box<A>`, found `A`
   |        this expression has type `&mut Box<A>`
   |
   = note: expected struct `Box<A>`
              found struct `A`
   = note: this error originates in the macro `deconstruct_moving_ptr` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider dereferencing to access the inner value using the Deref trait
  --> $BEVY_ROOT/bevy_ptr/src/lib.rs:1461:57
   |
146|             let $struct_name { $($field_index: _),* } = &**value;
   |                                                         +++

error[E0308]: mismatched types
  --> tests/ui/deconstruct_moving_ptr.rs:31:5
   |
31 | /     deconstruct_moving_ptr!({
32 | |         let A { x } = box_a;
33 | |     });
   | |______^ expected `A`, found `Box<A>`
   |
   = note: expected struct `A`
              found struct `Box<A>`
   = note: this error originates in the macro `deconstruct_moving_ptr` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/deconstruct_moving_ptr.rs:35:5
   |
35 | /     deconstruct_moving_ptr!({
36 | |         let A { x } = mut_a;
37 | |     });
   | |______^ expected `A`, found `&mut A`
   |
   = note: this error originates in the macro `deconstruct_moving_ptr` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/deconstruct_moving_ptr.rs:39:5
   |
39 | /     deconstruct_moving_ptr!({
40 | |         let tuple { 0: _ } = box_t1;
41 | |     });
   | |      ^
   | |      |
   | |______expected `Box<(usize,)>`, found `(_,)`
   |        expected due to the type of this binding
   |
   = note: expected struct `Box<(usize,)>`
               found tuple `(_,)`
   = note: for more on the distinction between the stack and the heap, read https://doc.rust-lang.org/book/ch15-01-box.html, https://doc.rust-lang.org/rust-by-example/std/box.html, and https://doc.rust-lang.org/std/boxed/index.html
   = note: this error originates in the macro `deconstruct_moving_ptr` (in Nightly builds, run with -Z macro-backtrace for more info)
help: store this in the heap by calling `Box::new`
  --> $BEVY_ROOT/bevy_ptr/src/lib.rs:1420:22
   |
142|             *value = Box::new(($(unreachable($field_index),)*));
   |                      +++++++++                                +
help: consider dereferencing here to assign to the mutably borrowed value
  --> $BEVY_ROOT/bevy_ptr/src/lib.rs:1420:13
   |
142|             **value = ($(unreachable($field_index),)*);
   |             +

error[E0308]: mismatched types
  --> tests/ui/deconstruct_moving_ptr.rs:43:5
   |
43 | /     deconstruct_moving_ptr!({
44 | |         let tuple { 0: _ } = mut_t1;
45 | |     });
   | |      ^
   | |      |
   | |______expected `&mut (usize,)`, found `(_,)`
   |        expected due to the type of this binding
   |
   = note: expected mutable reference `&mut (usize,)`
                          found tuple `(_,)`
   = note: this error originates in the macro `deconstruct_moving_ptr` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider dereferencing here to assign to the mutably borrowed value
  --> $BEVY_ROOT/bevy_ptr/src/lib.rs:1420:13
   |
142|             **value = ($(unreachable($field_index),)*);
   |             +

error[E0308]: mismatched types
  --> tests/ui/deconstruct_moving_ptr.rs:47:5
   |
47 | /     deconstruct_moving_ptr!({
48 | |         let tuple { 0: _, 1: _ } = box_t2;
49 | |     });
   | |      ^
   | |      |
   | |______expected `Box<(usize, usize)>`, found `(_, _)`
   |        expected due to the type of this binding
   |
   = note: expected struct `Box<(usize, usize)>`
               found tuple `(_, _)`
   = note: for more on the distinction between the stack and the heap, read https://doc.rust-lang.org/book/ch15-01-box.html, https://doc.rust-lang.org/rust-by-example/std/box.html, and https://doc.rust-lang.org/std/boxed/index.html
   = note: this error originates in the macro `deconstruct_moving_ptr` (in Nightly builds, run with -Z macro-backtrace for more info)
help: store this in the heap by calling `Box::new`
  --> $BEVY_ROOT/bevy_ptr/src/lib.rs:1420:22
   |
142|             *value = Box::new(($(unreachable($field_index),)*));
   |                      +++++++++                                +
help: consider dereferencing here to assign to the mutably borrowed value
  --> $BEVY_ROOT/bevy_ptr/src/lib.rs:1420:13
   |
142|             **value = ($(unreachable($field_index),)*);
   |             +

error[E0308]: mismatched types
  --> tests/ui/deconstruct_moving_ptr.rs:51:5
   |
51 | /     deconstruct_moving_ptr!({
52 | |         let tuple { 0: _, 1: _ } = mut_t2;
53 | |     });
   | |      ^
   | |      |
   | |______expected `&mut (usize, usize)`, found `(_, _)`
   |        expected due to the type of this binding
   |
   = note: expected mutable reference `&mut (usize, usize)`
                          found tuple `(_, _)`
   = note: this error originates in the macro `deconstruct_moving_ptr` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider dereferencing here to assign to the mutably borrowed value
  --> $BEVY_ROOT/bevy_ptr/src/lib.rs:1420:13
   |
142|             **value = ($(unreachable($field_index),)*);
   |             +

error[E0308]: mismatched types
  --> tests/ui/deconstruct_moving_ptr.rs:77:23
   |
75 | /     deconstruct_moving_ptr!({
76 | |
77 | |         let A { x } = a;
   | |                       ^ expected `MovingPtr<'_, _, _>`, found `&mut MovingPtr<'_, A>`
78 | |     });
   | |______- expected due to this
   |
   = note:         expected struct `MovingPtr<'_, _, _>`
           found mutable reference `&mut MovingPtr<'_, A, Aligned>`

error[E0308]: mismatched types
  --> tests/ui/deconstruct_moving_ptr.rs:81:30
   |
79 | /     deconstruct_moving_ptr!({
80 | |
81 | |         let tuple { 0: _ } = t1;
   | |                              ^^ expected `MovingPtr<'_, _, _>`, found `&mut MovingPtr<'_, (usize,)>`
82 | |     });
   | |______- expected due to this
   |
   = note:         expected struct `MovingPtr<'_, _, _>`
           found mutable reference `&mut MovingPtr<'_, (usize,), Aligned>`

error[E0308]: mismatched types
  --> tests/ui/deconstruct_moving_ptr.rs:85:36
   |
83 | /     deconstruct_moving_ptr!({
84 | |
85 | |         let tuple { 0: _, 1: _ } = t2;
   | |                                    ^^ expected `MovingPtr<'_, _, _>`, found `&mut MovingPtr<'_, (usize, usize)>`
86 | |     });
   | |______- expected due to this
   |
   = note:         expected struct `MovingPtr<'_, _, _>`
           found mutable reference `&mut MovingPtr<'_, (usize, usize), Aligned>`

error[E0499]: cannot borrow value as mutable more than once at a time
  --> tests/ui/deconstruct_moving_ptr.rs:59:5
   |
59 | /     deconstruct_moving_ptr!({
60 | |         let tuple { 0: _, 0: _ } = t;
61 | |     });
   | |      ^
   | |      |
   | |______value was mutably borrowed here in the previous iteration of the loop
   |        first borrow later used here
   |
   = note: this error originates in the macro `deconstruct_moving_ptr` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0793]: reference to packed field is unaligned
  --> tests/ui/deconstruct_moving_ptr.rs:67:5
   |
67 | /     deconstruct_moving_ptr!({
68 | |         let B { x } = b;
69 | |     });
   | |______^
   |
   = note: packed structs are only aligned by one byte, and many modern architectures penalize unaligned field accesses
   = note: creating a misaligned reference is undefined behavior (even if that reference is never dereferenced)
   = help: copy the field contents to a local variable, or replace the reference with a raw pointer and use `read_unaligned`/`write_unaligned` (loads and stores via `*p` must be properly aligned even when using raw pointers)
   = note: this error originates in the macro `deconstruct_moving_ptr` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `x`
  --> tests/ui/deconstruct_moving_ptr.rs:68:17
   |
68 |         let B { x } = b;
   |                 ^ help: if this is intentional, prefix it with an underscore: `_x`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

error: aborting due to 13 previous errors; 1 warning emitted

Some errors have detailed explanations: E0025, E0308, E0499, E0793.
For more information about an error, try `rustc --explain E0025`.
